--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "koa2-es6",
   "type": "module",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
