--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "mongodb": "^4.11.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   }
