--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "mon": "nodemon main.js"
   },
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "axios": "^0.26.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "9.0.0",
     "koa": "^2.13.4",
-    "koa-body": "^4.2.0",
+    "koa-body": "^6.0.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
-    "koa2-cors": "^2.0.6",
     "mongodb": "^4.11.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
