--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"serve": "node src/app.js",
 		"mon": "nodemon main.js",
-		"pm2": "pm2 start pm2.config.cjs --env development",
-		"pm2:test": "pm2 start pm2.config.cjs --env production"
+		"pm2": "pm2 start build/pm2.config.cjs --env development",
+		"pm2:test": "pm2 start build/pm2.config.cjs --env production"
 	},
 	"dependencies": {
 		"@koa/cors": "^4.0.0",
