--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-	"name": "koa2-es6",
-	"type": "module",
-	"version": "1.6.1",
-	"main": "main.js",
-	"license": "MIT",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"serve": "node src/app.js",
-		"mon": "nodemon main.js",
-		"pm2": "pm2 start build/pm2.config.cjs --env development",
-		"pm2:test": "pm2 start build/pm2.config.cjs --env production"
-	},
-	"dependencies": {
-		"@koa/cors": "^4.0.0",
-		"axios": "^0.26.1",
-		"jsonwebtoken": "9.0.0",
-		"koa": "^2.13.4",
-		"koa-body": "^6.0.1",
-		"koa-logger": "^3.2.1",
-		"koa-router": "^12.0.0",
-		"koa-static": "^5.0.0",
-		"mongodb": "^4.11.0",
-		"mysql2": "^2.3.3",
-		"nodemon": "^2.0.15"
-	}
+  "name": "koa2-es6",
+  "type": "module",
+  "version": "1.8.2",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "node ./index.js",
+    "mon": "nodemon index.js",
+    "mon-vercel": "nodemon vercel dev",
+    "pm2": "pm2 start pm2.config.cjs --env development",
+    "pm2:test": "pm2 start pm2.config.cjs --env production"
+  },
+  "dependencies": {
+    "@koa/cors": "^4.0.0",
+    "dayjs": "^1.11.10",
+    "jsonwebtoken": "9.0.0",
+    "koa": "^2.13.4",
+    "koa-body": "^6.0.1",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
+    "mongodb": "^4.11.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15"
+  }
 }
